# telescope-hyperbolic-foveation

./: .gitignore  README.md  TRAINING_FIXES.md  compare.py  eval.py  install.sh  pyproject.toml  report.py  requirements-train.txt  requirements.txt  ship_efficienttam_offline.sh  train.py
notebooks/: 01_geometric_engine.ipynb  02_foveation_warp.ipynb  03_hyperbolic_embedding.ipynb  04_detection_head.ipynb  05_full_pipeline.ipynb  06_results_analysis.ipynb
telescope/: __init__.py  backbone_efficienttam.py  backbone_sam3.py  box.py  checkpoint.py  data.py  data_drones.py  embedding.py  estimator.py  eval.py  geometry.py  head.py  matcher.py  pipeline.py  trainlog.py  warp.py
