[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telescope"
version = "0.1.0"
description = "Learnable Hyperbolic Foveation for Ultra-Long-Range Object Detection"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["telescope*"]
